--- a/app/src/main/res/layout/fragment_image_detail.xml
+++ b/app/src/main/res/layout/fragment_image_detail.xml
@@ -34,11 +34,11 @@
             android:id="@+id/btnDownload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/download_image"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_download"
-            android:contentDescription="@string/download_image" />
+            app:srcCompat="@drawable/ic_download" />
 
         <View
             android:id="@+id/viewClick"
@@ -70,12 +70,12 @@
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_favorite"
                     app:layout_constraintBottom_toBottomOf="@+id/tvComment"
                     app:layout_constraintEnd_toStartOf="@+id/tvComment"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tvComment"
-                    app:drawableStartCompat="@drawable/ic_favorite" />
+                    app:layout_constraintTop_toTopOf="@+id/tvComment" />
 
                 <TextView
                     android:id="@+id/tvComment"
@@ -85,12 +85,12 @@
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_comment"
                     app:layout_constraintBottom_toBottomOf="@+id/tvViews"
                     app:layout_constraintEnd_toStartOf="@+id/tvViews"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/tvFavorites"
-                    app:layout_constraintTop_toTopOf="@+id/tvViews"
-                    app:drawableStartCompat="@drawable/ic_comment" />
+                    app:layout_constraintTop_toTopOf="@+id/tvViews" />
 
                 <TextView
                     android:id="@+id/tvViews"
@@ -100,12 +100,12 @@
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_eye"
                     app:layout_constraintBottom_toBottomOf="@+id/tvShare"
                     app:layout_constraintEnd_toStartOf="@+id/tvShare"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/tvComment"
-                    app:layout_constraintTop_toTopOf="@+id/tvShare"
-                    app:drawableStartCompat="@drawable/ic_eye" />
+                    app:layout_constraintTop_toTopOf="@+id/tvShare" />
 
                 <TextView
                     android:id="@+id/tvShare"
@@ -117,11 +117,11 @@
                     android:text="@string/share"
                     android:textColor="@color/white"
                     android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_share"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/tvViews"
-                    app:drawableStartCompat="@drawable/ic_share" />
+                    app:layout_constraintStart_toEndOf="@+id/tvViews" />
 
                 <View
                     android:id="@+id/view2"
@@ -167,14 +167,24 @@
                 <TextView
                     android:id="@+id/tvUsername"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_height="0dp"
+                    android:layout_marginStart="8dp"
+                    android:gravity="center_vertical"
                     android:textColor="@color/white"
                     android:textSize="16sp"
                     android:textStyle="bold|italic"
-                    app:layout_constraintBottom_toTopOf="@+id/tvTitle"
+                    app:layout_constraintBottom_toBottomOf="@+id/imvAvt"
                     app:layout_constraintEnd_toEndOf="@+id/tvDescription"
-                    app:layout_constraintStart_toStartOf="@+id/tvDescription" />
+                    app:layout_constraintStart_toEndOf="@+id/imvAvt"
+                    app:layout_constraintTop_toTopOf="@+id/imvAvt" />
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/imvAvt"
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toTopOf="@+id/tvTitle"
+                    app:layout_constraintStart_toStartOf="@+id/tvTitle" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
